# essay-gptability

./: .gitignore  24k_vllm.out  README.md  big_eval.out  clean_prompt_data.py  export_onnx.py  first_model.py  generate_fake_data.py  gpu_run.out  log_reg.py  main.py  ollama_v.py  p1_utils.py  parse_data.py  pyproject.toml  run_vllm_script.py  second_model.py  sentence_transformer_first_model.py  transformer_second_eval.py  transformer_second_model.py
evaluation_output/: output.txt
web_demo/: README.md  index.html  inference.js
web_demo/models/: regressor.onnx  regressor_quantized.onnx
