[project]
name = "essay-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "byllm>=0.4.5",
    "datasets>=4.4.1",
    "jaclang>=0.8.10",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
]
